# taven

./: .gitignore  .gitmessage  Cargo.toml  README-draft.md  README.md
crates/taven_core/: Cargo.toml  README.md
crates/taven_core/src/: lib.rs
crates/taven_core/src/branch/: mod.rs  selector.rs  sequence.rs
crates/taven_core/src/leaf/: action.rs  mod.rs
crates/taven_core/src/task/: async_task.rs  mod.rs  sync_to_async.rs  task.rs  task_error.rs  task_result.rs  task_status.rs
crates/taven_internal/: Cargo.toml  README.md
crates/taven_internal/src/: lib.rs  prelude.rs
docs/contributing/: .gitkeep
docs/guide/: adding_new_content.md
src/: lib.rs
