[package]
name = "taven"
version = "0.1.1"
edition = "2024"
authors = ["Jiashu"]
description = "Taven is a lightweight, modular engine for building control-flow systems — behavior trees, state machines, reactive logic pipelines, or anything that can be expressed as nodes and flows."
homepage = "https://github.com/jiashumiao/taven"
repository = "https://github.com/jiashumiao/taven"
license = "MIT OR Apache-2.0"
keywords = ["taven", "task", "behavior", "tree", "control", "flow"]

[dependencies]
taven_internal = { path = "crates/taven_internal", version = "0.1.1"}

[dev-dependencies]

[workspace]
members = [
    "crates/taven_core", 
    "crates/taven_internal",
]
