[package]
name = "taven_core"
version = "0.1.1"
edition = "2024"
authors = ["Jiashu <790548118@qq.com>"]
description = "The sub package maintained by taven"
homepage = "https://github.com/jiashumiao/taven"
repository = "https://github.com/jiashumiao/taven"
license = "MIT OR Apache-2.0"
keywords = ["taven", "task", "behavior", "tree", "control", "flow", "taven_core"]

[dependencies]
thiserror = "2.0.17"
